--- a/power.css
+++ b/power.css
@@ -1,5 +1,6 @@
 header {
     margin-left: 10px;
+    text-shadow: 1px 1px 3px#f6ff0096;
 }
 
 div.rankings {
@@ -10,6 +11,8 @@ div.rankings {
     border-radius: 3px;
     padding: 0 10px 0;
     margin-top: 20px;
+    text-shadow: 1px 1px 3px#f6ff00ac;
+    box-shadow: 1px 1px 5px#f6ff00;
 }
 
 img{
