--- a/versus.css
+++ b/versus.css
@@ -1,5 +1,10 @@
 header {
     margin-left: 10px;
+    text-shadow: 1px 1px 3px#f6ff00ac; 
+}
+
+h3{
+    font-weight: 500;
 }
 
 div.matchup {
@@ -10,6 +15,8 @@ div.matchup {
     border-radius: 3px;
     padding: 0 10px 0;
     margin-top: 20px;
+    text-shadow: 1px 1px 3px#f6ff00ac;
+    box-shadow: 1px 1px 5px#f6ff00;
 }
 
 img{
@@ -17,4 +24,6 @@ img{
     max-width: 80vw;
     display: block;
     margin: 15px auto;
+    box-shadow: 1px 1px 5px#f6ff00, -1px -1px 5px rgb(20, 181, 53);
+    border-radius: 4px;
 }
